[MD Bookmarks] Restore focus after closing a dialog or context menu.

This CL makes dialogs in the bookmark manager restore focus to the
previously focused element after dismissal.

BUG=730905
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2954273002
Cr-Commit-Position: refs/heads/master@{#483440}