chrome/browser/ui/webui/md_bookmarks/md_bookmarks_ui.cc
@@ -6,6 +6,8 @@
 
 #include <algorithm>
 #include <string>
+#include <unordered_set>
+#include <utility>
 
 #include "base/strings/string16.h"
 #include "chrome/browser/profiles/profile.h"
@@ -118,6 +120,10 @@ content::WebUIDataSource* CreateMdBookmarksUIHTMLSource(Profile* profile) {
                           IDR_MD_BOOKMARKS_COMMAND_MANAGER_JS);
   source->AddResourcePath("constants.html", IDR_MD_BOOKMARKS_CONSTANTS_HTML);
   source->AddResourcePath("constants.js", IDR_MD_BOOKMARKS_CONSTANTS_JS);
+  source->AddResourcePath("dialog_focus_manager.html",
+                          IDR_MD_BOOKMARKS_DIALOG_FOCUS_MANAGER_HTML);
+  source->AddResourcePath("dialog_focus_manager.js",
+                          IDR_MD_BOOKMARKS_DIALOG_FOCUS_MANAGER_JS);
   source->AddResourcePath("dnd_manager.html",
                           IDR_MD_BOOKMARKS_DND_MANAGER_HTML);
   source->AddResourcePath("dnd_manager.js", IDR_MD_BOOKMARKS_DND_MANAGER_JS);
