chrome/browser/resources/md_bookmarks/edit_dialog.js
@@ -44,7 +44,7 @@ Polymer({
     this.isFolder_ = isFolder;
     this.parentId_ = parentId;
 
-    this.$.dialog.showModal();
+    bookmarks.DialogFocusManager.getInstance().showDialog(this.$.dialog);
   },
 
   /**
@@ -61,7 +61,7 @@ Polymer({
     if (!this.isFolder_)
       this.urlValue_ = assert(editItem.url);
 
-    this.$.dialog.showModal();
+    bookmarks.DialogFocusManager.getInstance().showDialog(this.$.dialog);
   },
 
   /**
