chrome/browser/resources/md_bookmarks/item.js
@@ -68,6 +68,7 @@ Polymer({
    */
   onContextMenu_: function(e) {
     e.preventDefault();
+    this.focus();
     if (!this.isSelectedItem_)
       this.selectThisItem_();
 
